# SoM

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Model/: Character.cpp  Character.h  Dialog.cpp  Dialog.h  Game.cpp  Game.h  Hitbox.cpp  Hitbox.h  Map.cpp  Map.h  Monster.cpp  Monster.h  Npc.cpp  Npc.h  PlayableChar.cpp  PlayableChar.h  Player.cpp  Player.h
Util/: Global.h  util.h
View/: Character_view.cpp  Character_view.h  Game_view.cpp  Game_view.h  Hitbox_view.cpp  Hitbox_view.h  Layer.cpp  Layer.h  Layer_component.cpp  Layer_component.h  Map_view.cpp  Map_view.h
